--- a/src/html/index.html
+++ b/src/html/index.html
@@ -739,7 +739,7 @@
 <section class="bg-[url('./../img/index/buy-bgd.jpg')] bg-no-repeat bg-cover pt-14 pb-32">
     <div class="container">
         <div class="bg-[url('./../img/index/buy-list-bg.png')] lg:bg-[url('./../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:bg-contain pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
-            <div class="mb-7 lg:flex lg:items-center lg:mb-[50px]">
+            <div class="mb-7 lg:flex gap-[10px] lg:items-center lg:mb-[50px] relative">
                 <h2
                     class="font-bold text-white text-3xl mb-7 md:text-[56px] md:leading-[56px] md:text-center lg:text-left lg:m-0">
                     Как просходит процесс покупки
@@ -748,8 +748,12 @@
                     Для того, чтобы приобрести недвижимость, вам не обязательно прилетать на Бали, многие сделки теперь
                     происходят дистанционно
                 </p>
-                <div class="after:block after:w-[130px] after:h-[1px] after:bg-whiteOp-300 relative after:absolute after:left-[2px] after:top-[50%] after:translate-y-[-50%] ">
-                    <div class="min-w-[10px] h-[10px] bg-blue-400 rounded-md relative z-10">
+                <div class="  
+                    after:block after:w-[44px]  after:h-[1px] after:bg-whiteOp-300 
+                    after:absolute after:left-[2px] after:top-[50%] after:translate-y-[-50%] 
+                    absolute top-[-20px] left-[50%] translate-x-[-50%] rotate-[-90deg] lg:static lg:rotate-0 lg:after:w-[130px]
+                ">
+                    <div class="min-w-[10px] max-w-[10px] h-[10px] bg-blue-400 rounded-md relative z-10">
                     </div>
                 </div>
             </div>
