--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -8,7 +8,7 @@
 					<a href="tel:+6281246502783" class="flex items-center gap-4 mb-7">
 						<img src="./img/index/whatsap.svg" alt="ic">
 						<div>
-							<span class="text-whiteOp-400 text-sm">
+							<span class="text-white/40 text-sm">
 								WhatsApp 24/7 online
 							</span>
 							<p class="text-white font-bold text-sm">
@@ -19,7 +19,7 @@
 					<a href="mailto:mail@avalonbali.com" class="flex items-center gap-4">
 						<img src="./img/index/whatsap.svg" alt="ic">
 						<div>
-							<span class="text-whiteOp-400 text-sm">
+							<span class="text-white/40 text-sm">
 								Email us
 							</span>
 							<p class="text-white font-bold text-sm">
@@ -72,28 +72,28 @@
 		<div class="container">
 			<div class="flex items-center justify-between gap-8">
 				<img src="./img/index/a-footer.png" class="max-w-[96px] md:hidden" alt="ph">
-				<ul class="md:flex md:items-center md:gap-4 md:justify-center md:w-full">
-					<li class="text-whiteOp-400 text-xs mb-2">
+				<ul class="md:flex md:items-center py-2 md:justify-center md:w-full">
+					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
 						<p >
 							© 2024 PT Avalon Group Bali
 						</p>
 					</li>
-					<li class="text-whiteOp-400 text-xs mb-2">
+					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Privacy Policy
 						</a>
 					</li>
-					<li class="text-whiteOp-400 text-xs mb-2">
+					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Terms & Conditions
 						</a>
 					</li>
-					<li class="text-whiteOp-400 text-xs mb-2">
+					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Сотрудничество
 						</a>
 					</li>
-					<li class="text-whiteOp-400 text-xs mb-2">
+					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Карьера
 						</a>
