--- a/src/html/about.html
+++ b/src/html/about.html
@@ -221,18 +221,18 @@
 
 <section class="bg-[url('./../img/about/apartment-bgd.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
     <div class="container">
-        <div class="bg-blue-600 py-10 px-5 rounded-2xl relative lg:flex lg:items-center lg:gap-5 lg:flex-row-reverse lg:justify-between lg:py-[100px] lg:px-[120px]">
+        <div class="bg-blue-600 py-10 px-5 rounded-2xl relative lg:flex lg:items-center lg:gap-10 lg:flex-row-reverse lg:justify-between lg:py-[100px] lg:px-[120px]">
 
-            <div class="min-w-[84px] h-[84px] bg-blue-400 text-center rounded-full flex justify-center items-center flex-col before:border before:border-blue-400 before:rounded-full before:w-[98px] before:h-[98px] before:absolute before:top-[-7px] before:left-[-7px] absolute top-[0px] left-[60px] z-10">
-                <p class="text-white text-xs">
+            <div class="min-w-[84px] h-[84px] md:min-w-[137px] md:h-[137px] bg-blue-400 text-center rounded-full flex justify-center items-center flex-col before:border before:border-blue-400 before:rounded-full before:w-[98px] before:h-[98px] md:before:w-[160px] md:before:h-[160px] before:absolute before:top-[-7px] before:left-[-7px] md:before:top-[-11px] md:before:left-[-12px]  absolute top-[0px] left-[60px] z-10 md:top-[70px] md:left-auto md:right-[60px]">
+                <p class="text-white text-xs md:text-lg md:uppercase">
                     Roi
                 </p>
-                <span class="text-white font-bold text-lg">
+                <span class="text-white font-bold text-lg md:text-3xl">
                     16%
                 </span>
             </div>
             <div class="swiper mySwiper-about relative lg:max-w-[600px] lg:m-0 lg:rounded-3xl">
-                <a href="#" class="absolute top-2 right-2 z-10">
+                <a href="#" class="absolute top-2 right-2 z-10 md:right-auto md:left-[30px] md:top-[30px]">
                     <img src="./img/about/360.png" class="max-w-[95px]" alt="ph">
                 </a>
                 <div class="swiper-wrapper">
