--- a/src/html/index.html
+++ b/src/html/index.html
@@ -648,7 +648,7 @@
                     class="bg-blue-400 min-w-2 h-2 rounded-[3px] before:block before:w-[50px] before:h-[1px] before:bg-blue-400/20 before:absolute before:right-[0] before:top-1 absolute top-[50%] left-5 translate-y-[-50%] lg:left-[50%] lg:top-[-20px] lg:translate-x-[-50%] lg:before:w-[1px] lg:before:h-[400px] lg:before:bottom-0 lg:before:top-auto lg:before:right-1">
                 </div>
                 <img src="./img/index/comp-1.svg" class="ml-5 lg:m-auto lg:w-[141px] " alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[222px] lg:mx-auto">
                     Лучшие путешествия BBC в номинации Лучший остров в мире
                 </p>
             </div>
@@ -659,7 +659,7 @@
                 </div>
 
                 <img src="./img/index/comp-2.svg" class="ml-5 lg:m-auto lg:w-[141px]" alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[222px] lg:mx-auto">
                     Другой влиятельный источник U.S. News ставит Бали 4-е место в мире по инвестиционной
                     привлекательности
                 </p>
@@ -671,7 +671,7 @@
                 </div>
 
                 <img src="./img/index/comp-3.svg" class="ml-5 lg:m-auto lg:w-[125px]" alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[222px] lg:mx-auto">
                     Forbes, один из самых влиятельных мировых аналитиков, назвал Бали одним из пяти лучших направлений
                     для инвестиций в мире.
                 </p>
@@ -684,7 +684,7 @@
 
                 <img src="./img/index/comp-4.svg" class="ml-5 lg:m-auto lg:w-[200px] lg:-mt-5 lg:pt-5 lg:bg-white"
                     alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[260px] lg:mx-auto">
                     Даже в период ограничений и пандемия, Бали остается самым желанным местом для посещеня туристов со
                     всего мира согласно к опросу о бронировании
                 </p>
@@ -696,7 +696,7 @@
                 </div>
 
                 <img src="./img/index/comp-5.svg" class="ml-5 lg:m-auto lg:w-[200px]" alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[222px] lg:mx-auto">
                     Ну и индустрия свадеб и торжеств не проходит мимо, Daily Mail и молодожены дают Бали первое место
                     для отдыха во время медового месяца
                 </p>
@@ -708,7 +708,7 @@
                 </div>
 
                 <img src="./img/index/comp-6.svg" class="ml-5 lg:m-auto lg:w-[160px]" alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[222px] lg:mx-auto">
                     Вот уже 2 года Бали выходит в рейтинг как лучший турист направление от Tripadvisor
                 </p>
             </div>
@@ -719,7 +719,7 @@
                 </div>
 
                 <img src="./img/index/comp-7.svg" class="ml-5 lg:m-auto lg:w-[140px]" alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[222px] lg:mx-auto">
                     Travel+leasure в своем рейтинге отдает первое место сред Азиатские страны на этот великолепный
                     остров
                 </p>
@@ -731,7 +731,7 @@
                 </div>
 
                 <img src="./img/index/comp-8.svg" class="ml-5 lg:m-auto lg:w-[200px]" alt="ic">
-                <p class="text-blue-600 text-xs lg:text-center">
+                <p class="text-blue-600 text-xs lg:text-center lg:max-w-[222px] lg:mx-auto">
                     Travel+leasure в своем рейтинге отдает первое место сред Азиатские страны на этот великолепный
                     остров
                 </p>
@@ -740,14 +740,15 @@
     </div>
 </section>
 
-<section class="bg-[url('./../img/index/buy-bgd.jpg')] bg-no-repeat bg-cover pt-14 pb-32">
-    <div class="container">
+<section class=" bg-no-repeat bg-cover pt-14 pb-32 relative overflow-hidden">
+    <img class="thumbnail absolute top-0 left-0 z-0 h-full w-full" src="./../img/index/buy-bgd.jpg" alt="image">
+    <div class="container relative z-10">
 
         <div
-            class="bg-[url('./../img/index/buy-list-bg.png')] lg:bg-[url('./../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:bg-contain pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
+            class="bg-[url('./../img/index/buy-list-bg.png')] lg:bg-[url('./../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:rounded-tr-3xl lg:rounded-bl-3xl pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
             <div class="mb-7 lg:flex lg:items-center lg:mb-[50px]">
 
-              <!--  
+                <!--  
             <div class="bg-[url('./../img/index/buy-list-bg.png')] lg:bg-[url('./../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:bg-contain pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
             <div class="mb-7 lg:flex gap-[10px] lg:items-center lg:mb-[50px] relative">
               -->
@@ -765,7 +766,7 @@
                     class="after:block after:w-[130px] after:h-[1px] after:bg-whiteOp-300 relative after:absolute after:left-[2px] after:top-[50%] after:translate-y-[-50%] ">
                     <div class="min-w-[10px] h-[10px] bg-blue-400 rounded-md relative z-10">
 
-                <!--
+                        <!--
                 <div class="  
                     after:block after:w-[44px]  after:h-[1px] after:bg-whiteOp-300 
                     after:absolute after:left-[2px] after:top-[50%] after:translate-y-[-50%] 
@@ -1116,7 +1117,9 @@
             <div class="swiper team">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="./img/index/user-1.png" class="m-auto grayscale" alt="ph">
+                        <div class="after:bg-blue-600/40 relative after:absolute brightness-125 after:top-0 after:left-0 after:w-full after:h-full after:rounded-full">
+                            <img src="./img/index/user-1.png" class="m-auto  grayscale" alt="ph">
+                        </div>
                         <div class="text-center mt-4">
                             <h3 class="font-bold text-white text-base mb-3 md:text-lg ">
                                 Дмитрий Грицай
@@ -1127,7 +1130,9 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/index/user-2.png" class="m-auto grayscale" alt="ph">
+                        <div class="after:bg-blue-600/40 relative after:absolute brightness-125 after:top-0 after:left-0 after:w-full after:h-full after:rounded-full">
+                            <img src="./img/index/user-2.png" class="m-auto  grayscale" alt="ph">
+                        </div>
                         <div class="text-center mt-4">
                             <h3 class="font-bold text-white text-base mb-3 md:text-lg ">
                                 Мигран Каграманян
@@ -1138,7 +1143,9 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/index/user-3.png" class="m-auto grayscale" alt="ph">
+                        <div class="after:bg-blue-600/40 relative after:absolute brightness-125 after:top-0 after:left-0 after:w-full after:h-full after:rounded-full">
+                            <img src="./img/index/user-3.png" class="m-auto  grayscale" alt="ph">
+                        </div>
                         <div class="text-center mt-4">
                             <h3 class="font-bold text-white text-base mb-3 md:text-lg ">
                                 Размик Каграманян
@@ -1149,7 +1156,9 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/index/user-4.png" class="m-auto grayscale" alt="ph">
+                        <div class="after:bg-blue-600/40 relative after:absolute brightness-125 after:top-0 after:left-0 after:w-full after:h-full after:rounded-full">
+                            <img src="./img/index/user-4.png" class="m-auto  grayscale" alt="ph">
+                        </div>
                         <div class="text-center mt-4">
                             <h3 class="font-bold text-white text-base mb-3 md:text-lg ">
                                 Дмитрий Топилин
@@ -1160,7 +1169,9 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/index/user-5.png" class="m-auto grayscale" alt="ph">
+                        <div class="after:bg-blue-600/40 relative after:absolute brightness-125 after:top-0 after:left-0 after:w-full after:h-full after:rounded-full">
+                            <img src="./img/index/user-5.png" class="m-auto  grayscale" alt="ph">
+                        </div>
                         <div class="text-center mt-4">
                             <h3 class="font-bold text-white text-base mb-3 md:text-lg ">
                                 Ари Пурнаван
@@ -1171,7 +1182,9 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/index/user-6.png" class="m-auto grayscale" alt="ph">
+                        <div class="after:bg-blue-600/40 relative after:absolute brightness-125 after:top-0 after:left-0 after:w-full after:h-full after:rounded-full">
+                            <img src="./img/index/user-6.png" class="m-auto  grayscale" alt="ph">
+                        </div>
                         <div class="text-center mt-4">
                             <h3 class="font-bold text-white text-base mb-3 md:text-lg ">
                                 Анастасия Коваль
@@ -1182,7 +1195,9 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/index/user-1.png" class="m-auto grayscale" alt="ph">
+                        <div class="after:bg-blue-600/40 relative after:absolute brightness-125 after:top-0 after:left-0 after:w-full after:h-full after:rounded-full">
+                            <img src="./img/index/user-1.png" class="m-auto  grayscale" alt="ph">
+                        </div>
                         <div class="text-center mt-4">
                             <h3 class="font-bold text-white text-base mb-3 md:text-lg ">
                                 Дмитрий Грицай
@@ -1388,8 +1403,7 @@
                                 class="mb-3 md:mb-4 flex items-center text-blue-600 text-sm opacity-60 before:w-[6px] before:h-[6px] before:block before:bg-blue-600 before:rounded-sm before:mr-2">
                                 1 июня 2023
                             </span>
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                         </a>
@@ -1405,8 +1419,7 @@
                                 class="mb-3 md:mb-4 flex items-center text-blue-600 text-sm opacity-60 before:w-[6px] before:h-[6px] before:block before:bg-blue-600 before:rounded-sm before:mr-2">
                                 1 июня 2023
                             </span>
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                         </a>
@@ -1422,8 +1435,7 @@
                                 class="mb-3 md:mb-4 flex items-center text-blue-600 text-sm opacity-60 before:w-[6px] before:h-[6px] before:block before:bg-blue-600 before:rounded-sm before:mr-2">
                                 1 июня 2023
                             </span>
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                         </a>
@@ -1439,8 +1451,7 @@
                                 class="mb-3 md:mb-4 flex items-center text-blue-600 text-sm opacity-60 before:w-[6px] before:h-[6px] before:block before:bg-blue-600 before:rounded-sm before:mr-2">
                                 1 июня 2023
                             </span>
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                         </a>
@@ -1456,8 +1467,7 @@
                                 class="mb-3 md:mb-4 flex items-center text-blue-600 text-sm opacity-60 before:w-[6px] before:h-[6px] before:block before:bg-blue-600 before:rounded-sm before:mr-2">
                                 1 июня 2023
                             </span>
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                         </a>
@@ -1508,8 +1518,7 @@
                                     alt="">
                             </div>
 
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                             <span class="mt-3 md:mt-4 flex items-center text-blue-600 text-sm opacity-60">
@@ -1526,8 +1535,7 @@
                                     alt="">
                             </div>
 
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                             <span class="mt-3 md:mt-4 flex items-center text-blue-600 text-sm opacity-60">
@@ -1544,8 +1552,7 @@
                                     alt="">
                             </div>
 
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                             <span class="mt-3 md:mt-4 flex items-center text-blue-600 text-sm opacity-60">
@@ -1562,8 +1569,7 @@
                                     alt="">
                             </div>
 
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                             <span class="mt-3 md:mt-4 flex items-center text-blue-600 text-sm opacity-60">
@@ -1580,8 +1586,7 @@
                                     alt="">
                             </div>
 
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                             <span class="mt-3 md:mt-4 flex items-center text-blue-600 text-sm opacity-60">
@@ -1598,8 +1603,7 @@
                                     alt="">
                             </div>
 
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                             <span class="mt-3 md:mt-4 flex items-center text-blue-600 text-sm opacity-60">
@@ -1616,8 +1620,7 @@
                                     alt="">
                             </div>
 
-                            <p
-                                class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
+                            <p class="text-base md:text-lg group-hover:text-blue-400 text-blue-600 font-bold">
                                 СТАРТ ПРОДАЖ клубного дома <br>на 7 видовых квартир
                             </p>
                             <span class="mt-3 md:mt-4 flex items-center text-blue-600 text-sm opacity-60">
