--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -12,11 +12,14 @@
 	<!-- <link rel="stylesheet" href="./files/swiper/swiper.min.css" /> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
+	<!-- intelInput -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
+
 </head>
 
 <body>
 
-	<header class="bg-blue-500 py-4 fixed top-0 left-0 w-full border-b-2 border-b-whiteOp-300 z-30 lg:bg-transparent lg:border-none transition-all">
+	<header class="bg-blue-500 py-4 border-b-2 border-b-whiteOp-300 z-30 lg:bg-transparent lg:border-none transition-all">
 		<div class="container xl:max-w-[1920px]">
 			<div class="header__inner flex items-center justify-between gap-3 relative">
 				<a href="../index.html">
@@ -140,7 +143,7 @@
 				<button id="burgerBtn" type="button" class="3xl:hidden block ">
 					<img src="./img/icons/burder.svg" class="min-w-[28px]" alt="burger ic">
 				</button>
-				<div id="burgerMenu" class="burger__body hidden absolute top-[47px] lg:top-[114px] left-0 bg-blue-500 w-[calc(100%_+_60px)] -ml-[30px] flex-col flex text-center pt-12 pb-8 text-white text-lg border-t-2 border-whiteOp-300">
+				<div id="burgerMenu" class="burger__body hidden absolute top-[47px] lg:top-[114px] left-0 bg-blue-500 w-[calc(100%_+_60px)] -ml-[30px] flex-col flex text-center pt-12 pb-8 text-white text-lg border-t-2 border-whiteOp-300 z-10">
 					<div class="burger__proj mb-8 lg:hidden block">
 						<p id="toggleProjects" class="flex items-center gap-1 justify-center hover:text-blue-400 transition-all cursor-pointer">
 							Проекты
