--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -19,7 +19,7 @@
 
 <body>
 
-	<header class="bg-blue-500 py-4 border-b-2 border-b-whiteOp-300 z-30 lg:bg-transparent lg:border-none transition-all">
+	<header class="bg-blue-500 py-4 border-b-2 border-b-whiteOp-300 z-30 lg:bg-transparent lg:border-none transition-all absolute w-full">
 		<div class="container xl:max-w-[1920px]">
 			<div class="header__inner flex items-center justify-between gap-3 relative">
 				<a href="../index.html">
