--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     <div class="swiper swiper-banner relative">
         <div class="swiper-wrapper">
 
-            <div class="swiper-slide pt-40 relative overflow-hidden">
+            <div class="swiper-slide pt-40 lg:pt-[250px] relative overflow-hidden">
                 <div class="container">
                     <div class="flex items-center justify-between">
                         <div class="">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide pb-10 pt-36 relative overflow-hidden">
+            <div class="swiper-slide pb-10 pt-36 lg:pt-[217px] relative overflow-hidden">
                 <div
                     class="bg-[url('./../img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
                 </div>
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide pt-40 relative overflow-hidden">
+            <div class="swiper-slide pt-40 lg:pt-[250px] relative overflow-hidden">
                 <div class="container">
                     <div class="flex items-center justify-between">
                         <div class="">
@@ -204,7 +204,7 @@
         </div>
         <div class="swiper-pagination"></div>
         <button type="button"
-            class="hidden lg:flex items-center gap-2 py-5 px-10px w-full bg-blue-400 rounded-xl max-w-[260px] text-white text-sm font-bold justify-center transition-all hover:bg-blue-600 absolute bottom-[165px] right-[60px] z-10 ">
+            class="hidden lg:flex items-center gap-2 py-5 px-10px w-full bg-blue-400 rounded-xl max-w-[260px] text-white text-sm font-bold justify-center transition-all hover:bg-blue-600 absolute bottom-[95px] right-[60px] z-10 ">
             <img src="./img/index/head-whatss.svg" class="max-w-[15px]" alt="ic">
             Cвязаться в WhatsApp
         </button>
@@ -380,8 +380,15 @@
     </div>
 </section>
 
-<section class="map py-14 md:py-24 bg-blue-600 overflow-hidden">
-    <div class="container">
+<section class="map py-14 md:py-24 bg-blue-600 overflow-hidden relative">
+    <div class="absolute -left-36 bottom-20 w-72 h-72 z-10">
+        <img src="./img/icons/vector-logo.svg" alt="vector-logo">
+    </div>
+    <div class="absolute -right-36 top-1/3 w-72 h-72 z-10">
+        <img src="./img/icons/vector-logo.svg" alt="vector-logo">
+    </div>
+
+    <div class="container relative z-20">
         <div class="relative md:flex">
             <!--  -->
             <img src="./img/index/map.svg"
@@ -642,8 +649,11 @@
     </div>
 </section>
 
-<section class="company lg:bg-white overflow-hidden lg:pt-24 lg:pb-16 relative overflow-hidden">
-    <div class="absolute -left-36 bottom-40 w-72 h-72 z-10">
+<section class="company lg:bg-white lg:pt-24 lg:pb-16 relative overflow-hidden">
+    <div class="absolute -left-36 bottom-20 w-72 h-72 z-10">
+        <img src="./img/icons/vector-logo.svg" class="invert" alt="vector-logo">
+    </div>
+    <div class="absolute -right-36 top-20 w-72 h-72 z-10">
         <img src="./img/icons/vector-logo.svg" class="invert" alt="vector-logo">
     </div>
     <div class="container">
@@ -750,8 +760,7 @@
     <img class="thumbnail absolute top-0 left-0 z-0 h-full w-full" src="./../img/index/buy-bgd.jpg" alt="image">
     <div class="container relative z-10">
 
-        <div
-            class="bg-[url('./../img/index/buy-list-bg.png')] lg:bg-[url('./../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:rounded-tr-3xl lg:rounded-bl-3xl pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
+        <div class="bg-[url('./../img/index/buy-list-bg.png')] lg:bg-[url('./../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:rounded-tr-3xl lg:rounded-bl-3xl pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:px-[120px] lg:py-[100px]">
             <div class="mb-7 lg:flex lg:items-center lg:mb-[50px]">
 
                 <!--  
@@ -1014,8 +1023,7 @@
             </div>
 
 
-            <button type="button"
-                class="w-[170px] h-[170px] md:w-[244px] md:h-[244px] rounded-full bg-blue-400 transition-all hover:bg-blue-500 flex flex-col items-center justify-center gap-1 before:block before:w-[200px] before:h-[200px] md:before:w-[284px] md:before:h-[284px] before:border before:border-whiteOp-200 before:hover:border-blue-500 before:transition-all before:rounded-full before:absolute bafore:top-[-14px] bafore:left-[-14px] absolute bottom-[-85px] md:bottom-[-122px] left-[50%] lg:bottom-auto lg:left-0 lg:top-[50%] lg:translate-y-[-50%] translate-x-[-50%] ">
+            <button type="button" class="w-[170px] h-[170px] md:w-[244px] md:h-[244px] rounded-full bg-blue-400 transition-all hover:bg-blue-500 flex flex-col items-center justify-center gap-1 before:block before:w-[200px] before:h-[200px] md:before:w-[284px] md:before:h-[284px] before:border before:border-whiteOp-200 before:hover:border-blue-500 before:transition-all before:rounded-full before:absolute bafore:top-[-14px] bafore:left-[-14px] absolute bottom-[-85px] md:bottom-[-122px] left-[50%] lg:bottom-auto 3xl:left-0 3xl:top-[50%] lg:translate-y-[-50%] translate-x-[-50%] lg:top-[75%] lg:left-28">
                 <b class="block font-bold text-white text-[40px]">
                     -5%
                 </b>
@@ -1236,7 +1244,7 @@
             <div class="flex flex-col md:flex-row gap-5">
                 <input type="text" placeholder="Имя"
                     class="bg-whiteOp-200 rounded-xl text-white text-sm p-5 outline-none md:p-6 md:text-base w-full">
-                <input id="phone-index" type="tel" placeholder="999-99-9999"
+                <input id="phone-index" type="tel"
                     class="bg-whiteOp-200 rounded-xl text-white text-sm p-5 outline-none md:p-6 md:text-base w-full">
                 <button type="submit"
                     class="p-5 w-full text-blue-500 text-sm font-bold bg-white rounded-xl hover:bg-blue-400 hover:text-white transition-all md:p-6 md:text-base">
@@ -1247,8 +1255,11 @@
     </div>
 </section>
 
-<section class="bg-white pt-14">
-    <div class="container">
+<section class="bg-white pt-14 overflow-hidden relative">
+    <div class="absolute -left-36 bottom-[5px] w-72 h-72 z-10">
+        <img src="./img/icons/vector-logo.svg" class="invert" alt="vector-logo">
+    </div>
+    <div class="container relative z-20">
         <div class="">
             <div class="flex justify-between items-center mb-8">
                 <h2 class="text-blue-600 font-bold text-[30px] lg:text-[56px]">
