--- a/src/html/career.html
+++ b/src/html/career.html
@@ -10,7 +10,7 @@
         <h1 data-aos="fade-up" class="md:text-5xl lg:text-6xl text-3xl text-white font-normalidad font-bold mb-5 md:mb-12">
             Карьера
         </h1>
-        <div data-aos="fade-up" data-aos-delay="100" class="justify-between items-center mb-10">
+        <div data-aos="fade-up" data-aos-delay="100" class="justify-between items-center mb-10 lg:mb-48">
             <p class="md:text-lg text-white text-sm mb-7 max-w-[548px]">
                 Для достижения амбициозных целей мы объединяем лучших. Специалисты компании имеют многолетний опыт
                 создания проектов, которые меняют города и делают комфортнее жизнь их обитателей. Если вы хотите
@@ -91,7 +91,7 @@
                 <br>
                 <p><b>Тебе зацікавила наша робота? Надішли нам своє резюме, і ми зв’яжемося з тобою!</b></p>
                 <br>
-                <button class="white-button">Отправить резюме</button>
+                <button class="white-button px-14">Отправить резюме</button>
             </div>
         </div>
         <div data-aos="fade-up" class="select career-select group">
@@ -159,6 +159,7 @@
     <div class="absolute -right-[72px] top-[250px] w-36 z-10">
         <img src="./img/icons/vector-logo.svg" alt="vector-logo">
     </div>
+    
 </section>
 
 @@include('blocks/footer.html')
