--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,4 +1,4 @@
-<footer class="mt-a bg-blue-600 pt-14 md:pt-24">
+<footer class="mt-a bg-blue-600 pt-14 md:pt-24 mt-auto">
 	<div class="container">
 
 		<div class="md:flex md:items-center gap-5 justify-between md:mb-24" >
