--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body class="flex flex-col min-h-screen">
 
 	<header class="bg-blue-500 py-4 border-b-2 border-b-whiteOp-300 z-30 lg:bg-transparent lg:border-none transition-all absolute w-full">
 		<div class="container xl:max-w-[1920px]">
