index page fix bugs

--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -79,27 +79,27 @@
 			<div class="flex items-center justify-between gap-8">
 				<img src="./img/index/a-footer.png" class="max-w-[96px] md:hidden" alt="ph">
 				<ul class="md:flex md:items-center py-2 md:justify-center md:w-full">
-					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
+					<li class="text-white/60 text-xs lg:text-sm mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/10 last:pr-0 last:mr-0 last:border-none">
 						<p >
 							© 2024 PT Avalon Group Bali
 						</p>
 					</li>
-					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
+					<li class="text-white/60 text-xs lg:text-sm mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/10 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Privacy Policy
 						</a>
 					</li>
-					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
+					<li class="text-white/60 text-xs lg:text-sm mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/10 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Terms & Conditions
 						</a>
 					</li>
-					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
+					<li class="text-white/60 text-xs lg:text-sm mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/10 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Сотрудничество
 						</a>
 					</li>
-					<li class="text-white/40 text-xs mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/40 last:pr-0 last:mr-0 last:border-none">
+					<li class="text-white/60 text-xs lg:text-sm mb-2 lg:mb-0 lg:border-r lg:pr-[14px] lg:mr-[14px] border-white/10 last:pr-0 last:mr-0 last:border-none">
 						<a href="#" class="hover:text-blue-400 transition-all">
 							Карьера
 						</a>
