Half bugs in about page

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -93,8 +93,8 @@
             </div>
         </div>
 
-        <ul class="border border-blue-400 rounded-2xl md:flex">
-            <li class="py-8 px-5 w-full border-b border-blue-400 lg:py-12 lg:px-8 md:border-b-0 md:border-r">
+        <ul class="border border-blue-400 lg:border-blue-500 rounded-2xl md:flex">
+            <li class="py-8 px-5 w-full border-b border-blue-400 lg:border-blue-500 lg:py-12 lg:px-8 md:border-b-0 md:border-r">
                 <span class="block font-bold text-white text-2xl mb-2 md:text-[40px] md:mb-4">
                     32
                 </span>
@@ -102,7 +102,7 @@
                     однокомнатных <br class="hidden lg:block">апартамента
                 </p>
             </li>
-            <li class="py-8 px-5 w-full border-b border-blue-400 lg:py-12 lg:px-8 md:border-b-0 md:border-r">
+            <li class="py-8 px-5 w-full border-b border-blue-400 lg:border-blue-500 lg:py-12 lg:px-8 md:border-b-0 md:border-r">
                 <span class="block font-bold text-white text-2xl mb-2 md:text-[40px] md:mb-4">
                     6
                 </span>
@@ -110,7 +110,7 @@
                     двуспальных <br class="hidden lg:block">вилл
                 </p>
             </li>
-            <li class="py-8 px-5 w-full border-b border-blue-400 lg:py-12 lg:px-8 md:border-b-0 md:border-r">
+            <li class="py-8 px-5 w-full border-b border-blue-400 lg:border-blue-500 lg:py-12 lg:px-8 md:border-b-0 md:border-r">
                 <img src="./img/about/camera.svg" class="max-w-[25px] mb-2 md:mb-4 md:max-w-[40px]" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     кинотеатр под <br class="hidden lg:block">открытым небом
@@ -212,7 +212,7 @@
                 Если вы на острове,
                 мы с радостью проведём вам экскурсию по объекту!
             </p>
-            <button type="button" class="w-full max-w-[270px] flex justify-center m-auto text-blue-600 text-sm font-bold p-4 rounded-xl bg-white md:text-base md:p-6 md:max-w-[362px] hover:bg-blue-400 hover:text-white transition-all">
+            <button type="button" class="white-button px-7 mx-auto lg:mx-0 lg:px-[60px]">
                 Записаться на просмотр
             </button>
         </div>
@@ -231,7 +231,8 @@
                     16%
                 </span>
             </div>
-            <div class="swiper mySwiper-about relative lg:max-w-[600px] lg:m-0 lg:rounded-3xl">
+
+            <div class="mySwiper-about relative lg:max-w-[600px] lg:mr-0 lg:ml-auto lg:m-0 lg:rounded-3xl rounded-2xl overflow-hidden">
                 <a href="#" class="absolute top-2 right-2 z-10 md:right-auto md:left-[30px] md:top-[30px]">
                     <img src="./img/about/360.png" class="max-w-[95px]" alt="ph">
                 </a>
@@ -255,64 +256,64 @@
                     <h2 class="font-bold text-white text-3xl mb-[10px] md:text-[56px] md:mb-7">
                         Апартаменты
                     </h2>
-                    <p class="text-blue-400 text-lg md:text-xl">
+                    <p class="text-blue-400 text-lg md:text-xl flex items-center">
                         От 110 000$
-                        <span class="text-whiteOp-400 text-xs ">
+                        <span class="text-white/60 text-xs ml-2">
                             *включая налоги
                         </span>
                     </p>
                 </div>
     
                 <div class="flex items-center gap-4 mb-7 md:mb-12">
-                    <div class="border border-blue-400 p-4 rounded-2xl w-full">
+                    <div class="border border-blue-400 p-4 max-w-[208px] rounded-2xl w-full">
                         <h3 class="font-bold text-white mb-2 md:text-xl md:mb-4">
                             42 м²
                         </h3>
-                        <p class="text-white text-sm md:text-base">
-                            площадь земли
+                        <p class="text-white text-sm md:text-base leading-[120%]">
+                            площадь <br>земли
                         </p>
                     </div>
-                    <div class="border border-blue-400 p-4 rounded-2xl w-full">
+                    <div class="border border-blue-400 p-4 max-w-[208px] rounded-2xl w-full">
                         <h3 class="font-bold text-white mb-2 md:text-xl md:mb-4">
                             4
                         </h3>
-                        <p class="text-white text-sm md:text-base">
-                            количество этажей
+                        <p class="text-white text-sm md:text-base leading-[120%]">
+                            количество <br>этажей
                         </p>
                     </div>
                 </div>
     
                 <ul class="grid grid-cols-2 gap-5">
-                    <li class="border-b border-whiteOp-300 pb-4">
+                    <li class="border-b border-whiteOp-300 max-w-[208px] pb-4">
                         <h3 class="font-bold text-white mb-2 md:text-xl md:mb-4 before:block before:h-[6px] before:w-[6px] before:rounded-sm before:bg-blue-400 flex items-center before:mr-2">
                             3 м²
                         </h3>
-                        <p class="text-white text-sm md:text-base">
-                            площадь прихожей
+                        <p class="text-white text-sm md:text-base leading-[120%]">
+                            площадь <br>прихожей
                         </p>
                     </li>
-                    <li class="border-b border-whiteOp-300 pb-4">
+                    <li class="border-b border-whiteOp-300 max-w-[208px] pb-4">
                         <h3 class="font-bold text-white mb-2 md:text-xl md:mb-4 before:block before:h-[6px] before:w-[6px] before:rounded-sm before:bg-blue-400 flex items-center before:mr-2">
                             7 м²
                         </h3>
-                        <p class="text-white text-sm md:text-base">
-                            площадь кухни
+                        <p class="text-white text-sm md:text-base leading-[120%]">
+                            площадь <br>кухни
                         </p>
                     </li>
-                    <li class="border-b border-whiteOp-300 pb-4">
+                    <li class="border-b border-whiteOp-300 max-w-[208px] pb-4">
                         <h3 class="font-bold text-white mb-2 md:text-xl md:mb-4 before:block before:h-[6px] before:w-[6px] before:rounded-sm before:bg-blue-400 flex items-center before:mr-2">
                             5 м²
                         </h3>
-                        <p class="text-white text-sm md:text-base">
-                            площадь санузла
+                        <p class="text-white text-sm md:text-base leading-[120%]">
+                            площадь <br>санузла
                         </p>
                     </li>
-                    <li class="border-b border-whiteOp-300 pb-4">
+                    <li class="border-b border-whiteOp-300 max-w-[208px] pb-4">
                         <h3 class="font-bold text-white mb-2 md:text-xl md:mb-4 before:block before:h-[6px] before:w-[6px] before:rounded-sm before:bg-blue-400 flex items-center before:mr-2">
                             22 м²
                         </h3>
-                        <p class="text-white text-sm md:text-base">
-                            площадь спальни /гостиной
+                        <p class="text-white text-sm md:text-base leading-[120%]">
+                            площадь спальни <br>/гостиной
                         </p>
                     </li>
                 </ul>
