--- a/src/html/index.html
+++ b/src/html/index.html
@@ -838,7 +838,7 @@
                 <img src="./img/index/point-line.png"
                     class="hidden lg:block absolute lg:top-[90px] h-[260px] right-[-40px] w-full max-w-[1188px]"
                     alt="line ph">
-                <ul class="mb-7 lg:mb-12 lg:grid lg:grid-cols-5 lg:gap-5 after:w-[1px] after:h-[calc(100%-30px)] after:bg-white/40 after:absolute after:bottom-0 after:left-[24.5px]">
+                <ul class="mb-7 lg:mb-12 lg:grid lg:grid-cols-5 lg:gap-5 lg:after:hidden after:w-[1px] after:h-[calc(100%-30px)] after:bg-white/40 after:absolute after:bottom-0 after:left-[24.5px]">
                     <li class="mb-5 flex items-center lg:flex-col">
                         <div
                             class="relative w-full max-w-[50px] mr-4 lg:mr-0 lg:mb-14 flex items-center justify-center md:max-w-[66px] md:h-[66px]">
