--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -6,7 +6,7 @@
             <button class="white-button open-modal" data-modal="vacancy">
                 Отклик на вакансию
             </button>
-            <button class="white-button">
+            <button class="white-button open-modal" data-modal="present">
                 Получить презентацию
             </button>
             <button class="white-button">
@@ -23,6 +23,58 @@
 </section>
 
 <div class="opacity-0 invisible transition-all modal fixed top-0 left-0 w-full h-full z-50 flex justify-center items-center modal-vacancy modal">
+    <div class="modal__bgd absolute top-0 left-0 bg-[#0A4A7F]/90 w-full h-full z-0">
+
+    </div>
+    <div class="modal__content relative z-10 bg-blue-500 rounded-[20px] w-full">
+        <div class="modal__cross modal__close absolute top-0 -right-4 cursor-pointer">
+            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect opacity="0.2" x="0.5" y="0.5" width="29" height="29" rx="9.5" stroke="white" />
+                <g opacity="0.5">
+                    <rect x="8.05469" y="7" width="20.9207" height="1.49433" transform="rotate(45 8.05469 7)"
+                        fill="white" style="fill:white;fill-opacity:1;" />
+                    <rect x="7" y="21.9434" width="20.9207" height="1.49433" transform="rotate(-45 7 21.9434)"
+                        fill="white" style="fill:white;fill-opacity:1;" />
+                </g>
+            </svg>
+        </div>
+        <div class="content__inner z-10 relative overflow-hidden p-10">
+
+            <div class="absolute right-[-34px] top-5 z-0">
+                <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
+            </div>
+            <div class="absolute left-[-34px] bottom-[154px] z-0">
+                <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
+            </div>
+
+            <h2 class="text-white text-2xl font-bold text-center mb-5">
+                Отклик на вакансию
+            </h2>
+
+            <form action="">
+                <div class="border border-dashed border-whiteOp-300 rounded-xl cursor-pointer mb-[10px]">
+                    <label class="p-5 relative">
+                        <input type="file" class="absolute top-0 left-0 w-full h-[100%] hidden">
+                        <div class="flex items-center gap-2 justify-center mb-[10px]">
+                            <img src="../img/icons/screpka.svg" alt="ic">
+                            <p class="text-white text-xs font-bold">
+                                Прикрепить файл с резюме
+                            </p>
+                        </div>
+                        <span class="text-xs text-[#FFFFFF66] text-center block ">
+                            .doc, .docx, .txt, .rtf, .odt, .pdf до 5 Мб.
+                        </span>
+                    </label>                   
+                </div>
+                <input type="text" placeholder="Имя и фамилия" class="w-full py-5 md:py-[23px] px-5 mb-[10px] md:mb-[15px] bg-whiteOp-200 rounded-[10px] text-white text-sm md:text-base outline-none border-none">
+                <input type="email" placeholder="Email" class="w-full py-5 md:py-[23px] px-5 mb-[10px] md:mb-[15px] bg-whiteOp-200 rounded-[10px] text-white text-sm md:text-base outline-none border-none">
+                <textarea placeholder="Введите текст сопроводительного письма" class="w-full py-5 md:py-[23px] px-5 mb-[10px] md:mb-[15px] bg-whiteOp-200 rounded-[10px] text-white text-sm md:text-base outline-none border-none">
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="opacity-0 invisible transition-all modal fixed top-0 left-0 w-full h-full z-50 flex justify-center items-center modal-present modal">
     <div class="modal__bgd absolute top-0 left-0 bg-[#031523]/90 w-full h-full z-0">
 
     </div>
