--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -22,59 +22,9 @@
     </div>
 </section>
 
-<div class="opacity-0 invisible transition-all modal fixed top-0 left-0 w-full h-full z-50 flex justify-center items-center modal-vacancy modal">
-    <div class="modal__bgd absolute top-0 left-0 bg-[#0A4A7F]/90 w-full h-full z-0">
 
-    </div>
-    <div class="modal__content relative z-10 bg-blue-500 rounded-[20px] w-full">
-        <div class="modal__cross modal__close absolute top-0 -right-4 cursor-pointer">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect opacity="0.2" x="0.5" y="0.5" width="29" height="29" rx="9.5" stroke="white" />
-                <g opacity="0.5">
-                    <rect x="8.05469" y="7" width="20.9207" height="1.49433" transform="rotate(45 8.05469 7)"
-                        fill="white" style="fill:white;fill-opacity:1;" />
-                    <rect x="7" y="21.9434" width="20.9207" height="1.49433" transform="rotate(-45 7 21.9434)"
-                        fill="white" style="fill:white;fill-opacity:1;" />
-                </g>
-            </svg>
-        </div>
-        <div class="content__inner z-10 relative overflow-hidden p-10">
-
-            <div class="absolute right-[-34px] top-5 z-0">
-                <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
-            </div>
-            <div class="absolute left-[-34px] bottom-[154px] z-0">
-                <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
-            </div>
-
-            <h2 class="text-white text-2xl font-bold text-center mb-5">
-                Отклик на вакансию
-            </h2>
-
-            <form action="">
-                <div class="border border-dashed border-whiteOp-300 rounded-xl cursor-pointer mb-[10px]">
-                    <label class="p-5 relative">
-                        <input type="file" class="absolute top-0 left-0 w-full h-[100%] hidden">
-                        <div class="flex items-center gap-2 justify-center mb-[10px]">
-                            <img src="../img/icons/screpka.svg" alt="ic">
-                            <p class="text-white text-xs font-bold">
-                                Прикрепить файл с резюме
-                            </p>
-                        </div>
-                        <span class="text-xs text-[#FFFFFF66] text-center block ">
-                            .doc, .docx, .txt, .rtf, .odt, .pdf до 5 Мб.
-                        </span>
-                    </label>                   
-                </div>
-                <input type="text" placeholder="Имя и фамилия" class="w-full py-5 md:py-[23px] px-5 mb-[10px] md:mb-[15px] bg-whiteOp-200 rounded-[10px] text-white text-sm md:text-base outline-none border-none">
-                <input type="email" placeholder="Email" class="w-full py-5 md:py-[23px] px-5 mb-[10px] md:mb-[15px] bg-whiteOp-200 rounded-[10px] text-white text-sm md:text-base outline-none border-none">
-                <textarea placeholder="Введите текст сопроводительного письма" class="w-full py-5 md:py-[23px] px-5 mb-[10px] md:mb-[15px] bg-whiteOp-200 rounded-[10px] text-white text-sm md:text-base outline-none border-none">
-            </form>
-        </div>
-    </div>
-</div>
-
-<div class="opacity-0 invisible transition-all modal fixed top-0 left-0 w-full h-full z-50 flex justify-center items-center modal-present modal">
+<div
+    class="opacity-0 invisible transition-all modal fixed top-0 left-0 w-full h-full z-50 flex justify-center items-center modal-vacancy modal">
     <div class="modal__bgd absolute top-0 left-0 bg-[#031523]/90 w-full h-full z-0">
 
     </div>
@@ -100,6 +50,32 @@
             </div>
 
             <h2 class="text-white text-2xl font-bold text-center mb-5">Отклик на вакансию</h2>
+
+            <form action="">
+
+                <label class="border border-dashed border-white/20 w-full flex items-center justify-center flex-col">
+                    <input type="file" class="hidden">
+                    <p class="flex items-center">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M10.0261 0C6.70014 0.00366211 4.00473 2.59089 4.00043 5.78382V15.6797C3.97809 17.216 4.81902 18.6448 6.2013 19.4192C7.58358 20.1936 9.29309 20.1936 10.6754 19.4192C12.0576 18.6448 12.8986 17.216 12.8762 15.6797V8.07042C12.8762 6.55931 11.6002 5.33431 10.0261 5.33431C8.45203 5.33431 7.17599 6.55931 7.17599 8.07042V14.5406C7.17599 14.9994 7.56349 15.3714 8.0415 15.3714C8.5195 15.3714 8.90701 14.9994 8.90701 14.5406V8.07042C8.90701 7.47708 9.40805 6.99608 10.0261 6.99608C10.6442 6.99608 11.1452 7.47708 11.1452 8.07042V15.6797C11.1627 16.6192 10.6506 17.4946 9.80594 17.9692C8.96123 18.4439 7.91543 18.4439 7.07073 17.9692C6.22602 17.4946 5.71395 16.6192 5.73145 15.6797V5.78382C5.73145 3.50682 7.65424 1.66095 10.0261 1.66095C12.398 1.66095 14.3208 3.50682 14.3208 5.78382V12.0479C14.3208 12.5068 14.7083 12.8788 15.1863 12.8788C15.6643 12.8788 16.0518 12.5068 16.0518 12.0479V5.78382C16.0475 2.59089 13.3521 0.00366211 10.0261 0Z"
+                                fill="white" style="fill:white;fill-opacity:1;" />
+                        </svg>
+                        <span class="text-white font-bold">Прикрепить файл с резюме</span>
+                    </p>
+                    <p class="text-white/40 mt-2"> .doc, .docx, .txt, .rtf, .odt, .pdf до 5 Мб.</p>
+                </label>
+
+                <input type="text" placeholder="Имя и фамилия">
+                <input type="email" placeholder="Email">
+                <textarea name="" id="" placeholder="Введите текст сопроводительного письма"></textarea>
+                <button type="submit" class="white-button">
+                    Отправить резюме
+                </button>
+
+                <p>Нажимая на кнопку “Отправить резюме”, вы соглашаетесь с нашей <a href="#">Политикой конфиденциальности</a></p>
+
+            </form>
 
         </div>
     </div>
