--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -6,6 +6,9 @@
             <button class="white-button open-modal" data-modal="vacancy">
                 Отклик на вакансию
             </button>
+            <button class="white-button open-modal" data-modal="contact">
+                Contact
+            </button>
             <button class="white-button open-modal" data-modal="present">
                 Получить презентацию
             </button>
@@ -21,6 +24,11 @@
         </div>
     </div>
 </section>
+
+<!-- // -->
+@@include('blocks/modals/contact.html')
+
+<!-- // -->
 
 
 @@include('blocks/modals/vacancy.html')
