commit about fix

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -451,136 +451,136 @@
                     </div>
 
                 </div>
-                <div class="w-full overflow-x-auto mt-5 pb-5">
+                <div class="about-scroll w-full overflow-x-auto mt-5 pb-5 ">
                     <div class="text-white w-full flex flex-col gap-y-[15px]">
                         <!-- Headers -->
-                        <div class="font-bold w-full grid grid-cols-[repeat(7,_130px)] md:grid-cols-[repeat(7,_180px)] gap-x-[10px] md:gap-x-[20px]">
+                        <div class="font-bold w-full grid grid-cols-[repeat(7,_140px)] md:grid-cols-[repeat(7,_180px)] gap-x-[10px] md:gap-x-[20px] md:mb-[10px]">
                             <div class="w-full"></div>
-                            <div class="w-full text-xs md:text-base font-normal"><p>Стоимость <br>за сутки</p></div>
-                            <div class="w-full text-xs md:text-base font-normal"><p>Заполняемость</p></div>
-                            <div class="w-full text-xs md:text-base font-normal"><p>Месячная <br>выручка</p></div>
-                            <div class="w-full text-xs md:text-base font-normal"><p>Годовой <br>доход</p></div>
-                            <div class="w-full text-xs md:text-base font-normal"><p>Чистый доход (минус УК, минус налоги)</p></div>
-                            <div class="w-full text-xs md:text-base font-normal"><p>ROI (return on investment)</p></div>
+                            <div class="w-full text-xs md:text-base font-normal text-center md:text-start"><p>Стоимость <br>за сутки</p></div>
+                            <div class="w-full text-xs md:text-base font-normal text-center md:text-start"><p>Заполняемость</p></div>
+                            <div class="w-full text-xs md:text-base font-normal text-center md:text-start"><p>Месячная <br>выручка</p></div>
+                            <div class="w-full text-xs md:text-base font-normal text-center md:text-start"><p>Годовой <br>доход</p></div>
+                            <div class="w-full text-xs md:text-base font-normal text-center md:text-start"><p>Чистый доход (минус УК, минус налоги)</p></div>
+                            <div class="w-full text-xs md:text-base font-normal text-center md:text-start"><p>ROI (return on investment)</p></div>
                         </div>
-                        <div class="w-full grid grid-cols-[repeat(7,_130px)] md:grid-cols-[repeat(7,_180px)] items-center gap-x-[10px] md:gap-x-[20px]">
-                            <div class="w-full">
-                                <p class="font-bold text-white text-[10px] md:text-base md:text-end">
+                        <div class="w-full grid grid-cols-[repeat(7,_140px)] md:grid-cols-[repeat(7,_180px)] items-center gap-x-[10px] md:gap-x-[20px]">
+                            <div class="w-full border-t border-b border-whiteOp-300 md:border-none py-5 md:py-0">
+                                <p class="font-bold text-white text-xs md:text-base md:text-end">
                                     Пессимистический <br>прогноз
                                 </p>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-blue-400 py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     70 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-blue-400 py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     70 %
                                 </p>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-blue-400 py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     1 470 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-blue-400 py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     17 640 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-blue-400 py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     12 348 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-blue-400 py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     11 %
                                 </p>
                             </div>
                         </div>
-                        <div class="w-full grid grid-cols-[repeat(7,_130px)] md:grid-cols-[repeat(7,_180px)] items-center gap-x-[10px] md:gap-x-[20px]">
-                            <div class="w-full">
-                                <p class="font-bold text-white text-[10px] md:text-base md:text-end">
+                        <div class="w-full grid grid-cols-[repeat(7,_140px)] md:grid-cols-[repeat(7,_180px)] items-center gap-x-[10px] md:gap-x-[20px]">
+                            <div class="w-full border-t border-b border-whiteOp-300 md:border-none py-5 md:py-0">
+                                <p class="font-bold text-white text-xs md:text-base md:text-end">
                                     Реалистичный <br>прогноз
                                 </p>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#DBA51B99] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     95 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#DBA51B99] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     80 %
                                 </p>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#DBA51B99] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     2 280 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#DBA51B99] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     27 360 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#DBA51B99] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     19 152 $
                                 </p>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#DBA51B99] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     17 %
                                 </p>
                             </div>
                         </div>
-                        <div class="w-full grid grid-cols-[repeat(7,_130px)] md:grid-cols-[repeat(7,_180px)] items-center gap-x-[10px] md:gap-x-[20px]">
-                            <div class="w-full">
-                                <p class="font-bold text-white text-[10px] md:text-base md:text-end">
+                        <div class="w-full grid grid-cols-[repeat(7,_140px)] md:grid-cols-[repeat(7,_180px)] items-center gap-x-[10px] md:gap-x-[20px]">
+                            <div class="w-full border-t border-b border-whiteOp-300 md:border-none py-5 md:py-0">
+                                <p class="font-bold text-white text-xs md:text-base md:text-end">
                                     Оптичистичный <br>прогноз
                                 </p>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#9B4CD999] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     100 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#9B4CD999] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     90 %
                                 </p>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#9B4CD999] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     2 700 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#9B4CD999] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     32 400 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#9B4CD999] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     22 680 $
                                 </p>
                                 <span class="text-xs text-[#FFFFFF99]">*включая налоги</span>
                             </div>
                             <div class="w-full whitespace-nowrap flex flex-col items-center justify-center  min-h-[-webkit-fill-available] rounded-[8px] bg-[#9B4CD999] py-[13px] px-1 md:px-[15px] md:py-[10px]">
-                                <p class="font-bold text-base md:text-2xl">
+                                <p class="font-bold text-base md:text-2xl md:leading-6">
                                     21 %
                                 </p>
                             </div>
