Create Calendar AirDatapicker

--- a/src/html/blocks/modals/vacancy.html
+++ b/src/html/blocks/modals/vacancy.html
@@ -15,7 +15,7 @@
                 </g>
             </svg>
         </div>
-        <div class="content__inner z-0 relative overflow-hidden p-5 lg:p-10 max-w-[600px]">
+        <div class="content__inner z-0 relative overflow-x-hidden overflow-y-auto p-5 lg:p-10 max-w-[600px] lg:max-h-[90vh]">
 
             <div class="absolute right-[-34px] -top-5 lg:top-5 z-0">
                 <img src="./img/icons/vector-logo.svg" class="w-[68px]" alt="vector-logo">
@@ -49,6 +49,8 @@
                 </button>
 
                 <p class="text-center text-white text-xs lg:text-sm w-full mt-5">Нажимая на кнопку “Отправить резюме”, вы соглашаетесь с нашей <a href="#" class="text-blue-400 font-bold underline transition-all hover:text-blue-700">Политикой конфиденциальности</a></p>
+
+                <div id="inline-picker"></div>
 
             </form>
 
